# punt

./: .gitignore  ARCIUM_ARCHITECTURE.md  DEMO_SCRIPT_TECHNICAL.md  README.md
punt-brain/: 00-INDEX.md  01-PRD.md  02-TECHNICAL-IMPLEMENTATION.md  03-DEVELOPMENT-PATTERNS.md  04-TASKS.md  SUMMARY.md
punt-frontend/: .env.example  README.md  package-lock.json  package.json
punt-frontend/app/: globals.css  layout.tsx  page.tsx
punt-frontend/app/apply/: page.tsx
punt-frontend/app/buy/: markets.ts  page.tsx
punt-frontend/components/: AppShell.tsx  BetOutcomeOverlay.tsx  BetToggleGroup.tsx  Header.tsx  PollStatCards.tsx  PollSummaryBar.tsx  Providers.tsx  ToastProvider.tsx  TransactionHashRow.tsx  TwitchHeader.tsx  TwitchSidebar.tsx  WalletBalance.tsx  WalletContextProvider.tsx
punt-frontend/idl/: punt_mxe.json  punt_mxe.ts  punt_program.ts  stream_bets_program.ts
punt-frontend/lib/: arciumClient.ts  payout.ts  solana.ts
punt-frontend/prisma/: schema.prisma
punt-frontend/scripts/: generate-arcium-keys.sh
punt-frontend/tests/: bet-toggle-group.test.tsx  livekit-smoke.test.ts  payout.test.ts  poll-selection-flow.test.tsx  test-utils.ts
punt-frontend/types/: ambient.d.ts  bs58.d.ts
punt-program/: Anchor.toml
punt-program/programs/stream-bets-program/: Cargo.toml
punt-program/programs/stream-bets-program/src/: lib.rs
punt-program/tests/: punt-program.js  stream-bets-program.js
punt_mxe/: ARCIUM_INTEGRATION.md  Anchor.toml  deploy-to-devnet.sh  package-lock.json
punt_mxe/scripts/: init-comp-def-raw.ts  init-comp-def.ts
punt_mxe/tests/: punt_mxe.ts
(+47 files in other folders)
